--- a/Day-07/index.html
+++ b/Day-07/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Day 07</title>
 </head>
+
 <body>
-    <h1>Day - 04 Javascript</h1>
-    <script defer src="./script.js"></script>
+    <div>
+        <a href="./rps/index.html">Rock Paper Scissors</a>
+        <br>
+        <a href="./secret-number/index.html">Guess The Secret Number Name</a>
+    </div>
+
 </body>
+
 </html>
